--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         },
         {
             "language": "graphql",
+            "rootDirFileName": "go.mod",
             "begin": "",
             "prefix": "# ",
             "end": "",
