Tries cleanup trap

--- a/ci/task-unit-test/task-unit-test.yml
+++ b/ci/task-unit-test/task-unit-test.yml
@@ -43,10 +43,11 @@ run:
       docker tag "$(cat golang/image-id)" "$(cat golang/repository):$(cat golang/tag)"
       docker images
 
-      trap "tail -f /dev/null" EXIT
+      # cleanup
+      cleanup() {
+        docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml -v down
+      }
+      trap cleanup EXIT
 
       # run logic via docker compose
       docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml run tests
-
-      # cleanup
-      docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml down
