--- a/ci/task-unit-test/task-unit-test.yml
+++ b/ci/task-unit-test/task-unit-test.yml
@@ -45,8 +45,7 @@ run:
 
       # cleanup
       cleanup() {
-        docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml -v down
-        tail -f /dev/null
+        docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml rm -fsv tests
       }
       trap cleanup EXIT
 
