Adds `stop_docker` in cleanup trap

--- a/ci/task-unit-test/task-unit-test.yml
+++ b/ci/task-unit-test/task-unit-test.yml
@@ -46,6 +46,7 @@ run:
       # cleanup
       cleanup() {
         docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml rm -fsv tests
+        stop_docker
       }
       trap cleanup EXIT
 
