--- a/ci/task-unit-test/task-unit-test.yml
+++ b/ci/task-unit-test/task-unit-test.yml
@@ -45,8 +45,8 @@ run:
 
       # cleanup
       cleanup() {
-        docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml rm -fsv tests
-        stop_docker
+        # docker-compose -f provendb-verify/ci/task-unit-test/docker-compose-unit-test.yml rm -fsv tests
+        # stop_docker
       }
       trap cleanup EXIT
 
