--- a/ci/task-unit-test/task-unit-test.yml
+++ b/ci/task-unit-test/task-unit-test.yml
@@ -28,7 +28,7 @@ inputs:
   - name: provendb-verify
   - name: golang
 params:
-  GIT_ACCESS_TOKEN: ((provendb-verify.git-access-token))
+  GIT_ACCESS_TOKEN: ((common.git-access-token))
   BC_TOKEN: ((provendb-verify.bc-token))
 run:
   path: sh
