Adds `rebase=true` when committing to `provendb-releases` [ci skip]

--- a/ci/pipeline-deploy.yml
+++ b/ci/pipeline-deploy.yml
@@ -131,6 +131,7 @@ jobs:
       - put: provendb-releases
         params:
           repository: provendb-releases
+          rebase: true
       - put: version
         params:
           bump: patch
