--- a/ci/task-build/task-build.yml
+++ b/ci/task-build/task-build.yml
@@ -23,7 +23,7 @@
 platform: linux
 image_resource:
   type: docker-image
-  source: { repository: creack/golang-dcind, tag: 1.14 }
+  source: { repository: southbanksoftware/golang-dcind, tag: latest }
 inputs:
   - name: version
   - name: provendb-verify
