Fix deploy pipeline task permission

--- a/ci/pipeline-deploy.yml
+++ b/ci/pipeline-deploy.yml
@@ -119,6 +119,7 @@ jobs:
           state: pending
       - get: version
       - task: build
+        privileged: true
         file: provendb-verify/ci/task-build/task-build.yml
       - in_parallel:
           fail_fast: true
